--- a/.editorconfig
+++ b/.editorconfig
@@ -19,3 +19,6 @@ end_of_line = lf    # Shell script must have LF mode
 
 [*.html]
 insert_final_newline = false
+
+[*.{js,json,ts}]
+indent_size = 2
