--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,10 @@
   },
   "devDependencies": {
     "@types/node": "~10.0.0",
+    "@types/react-redux": "^7.0.0",
     "clean-webpack-plugin": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "react-redux": "^6.0.0",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^5.3.3",
     "ts-node": "~7.0.0",
