--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "webpack-cli --config webpack.config.prod.js",
     "builddev": "webpack-cli --config webpack.config.dev.js",
-    "start": "webpack-cli -w --config webpack.config.dev.js"
+    "start": "webpack-cli -w --config webpack.config.dev.js",
+    "lint": "tslint --project ./tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,8 @@
     "ts-loader": "^5.3.3",
     "ts-node": "~7.0.0",
     "tslint": "*",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.2.4",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
