--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "~10.0.0",
     "@types/react-redux": "^7.0.0",
+    "@types/webpack": "^4.4.24",
     "clean-webpack-plugin": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "react-redux": "^6.0.0",
