--- a/client/package.json
+++ b/client/package.json
@@ -15,20 +15,21 @@
   "private": true,
   "author": "Stoik",
   "license": "MIT",
-  "dependencies": {
-    "@types/react": "^16.7.20",
-    "@types/react-dom": "^16.0.11",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
-  },
   "devDependencies": {
     "@types/node": "~10.0.0",
+    "@types/react": "^16.7.20",
+    "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^7.0.0",
     "@types/webpack": "^4.4.24",
     "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "ts-node": "~7.0.0",
     "tslint": "*",
