--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
