--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^7.0.0",
     "@types/webpack": "^4.4.24",
+    "bulma": "^0.7.2",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
