--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,7 @@
   "private": true,
   "author": "Stoik",
   "license": "MIT",
-  "devDependencies": {
-    "@types/node": "~10.0.0",
-    "@types/react": "^16.7.20",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-redux": "^7.0.0",
-    "@types/webpack": "^4.4.24",
+  "dependencies": {
     "bulma": "^0.7.2",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
@@ -30,22 +25,29 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "react": "^16.7.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "ts-node": "~7.0.0",
-    "tslint": "*",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-react": "^3.6.0",
     "typescript": "^3.2.4",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "webpack": "^4.28.4"
+  },
+  "devDependencies": {
+    "@types/node": "~10.0.0",
+    "@types/react": "^16.7.20",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^7.0.0",
+    "@types/webpack": "^4.4.24",
+    "tslint": "*",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-react": "^3.6.0"
   }
 }
