--- a/client/package.json
+++ b/client/package.json
@@ -20,25 +20,25 @@
     "bulma": "^0.7.2",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
-    "html-webpack-inline-chunk-plugin": "^1.1.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
-    "react": "^16.7.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
+    "spinkit": "^1.2.5",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "ts-node": "~7.0.0",
     "typescript": "^3.2.4",
     "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1",
-    "webpack": "^4.28.4"
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "~10.0.0",
