--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "sass-loader": "^7.1.0",
+    "script-ext-html-webpack-plugin": "^2.1.3",
     "source-map-loader": "^0.2.4",
     "spinkit": "^1.2.5",
     "style-loader": "^0.23.1",
