--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,7 +10,7 @@
     "importHelpers": true,
     "jsx": "react",
     "lib": [ "es2017", "dom" ],
-    "module": "es6",
+    "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
